# OrkunotkunV2

./: .env.example  .gitignore  README.md
.github/: copilot-instructions.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/: pyproject.toml
backend/app/: settings.py
backend/app/api/: main.py
backend/app/ingest/: db.py  run_backfill.py
backend/app/providers/: __init__.py  evidence.py  hsveitur.py  open_meteo.py  types.py  veitur.py  zaptec.py
backend/tests/: conftest.py
backend/tests/integration/: test_providers_smoke.py
backend/tests/unit/: test_failure_classification.py
docs/: API-Endpoints.md  Orkunotkun.drawio  PLAN-HANDOFF.md  integration-test-matrix.md
frontend/: README.md  index.html  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css  types.ts  vite-env.d.ts
frontend/src/components/: KpiCard.tsx  Panel.tsx
frontend/src/components/charts/: EnergyChart.tsx  SimpleMetricChart.tsx
frontend/src/data/: dashboardAdapter.ts  mockData.ts  supabaseClient.ts
infra/supabase/migrations/: 001_create_raw_tables.sql  002_create_aggregate_views.sql  003_hot_water_interval_semantics.sql  004_expose_public_dashboard_views.sql
scripts/: start-dev.sh
